// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`application 1`] = `
"<div class=\\"container m-3\\">
    <button
        type=\\"button\\"
        class=\\"btn btn-primary\\"
        data-toggle=\\"modal\\"
        data-target=\\"#exampleModal\\"
    >
        Launch demo modal 1
    </button>
    <div
        class=\\"modal fade\\"
        id=\\"exampleModal\\"
        tabindex=\\"-1\\"
        role=\\"dialog\\"
        aria-labelledby=\\"exampleModalLabel\\"
        aria-hidden=\\"true\\"
    >
        <div class=\\"modal-dialog\\" role=\\"document\\">
            <div class=\\"modal-content\\">
                <div class=\\"modal-header\\">
                    <h5 class=\\"modal-title\\" id=\\"exampleModalLabel\\">
                        Modal title 1
                    </h5>
                    <button
                        type=\\"button\\"
                        class=\\"close\\"
                        data-dismiss=\\"modal\\"
                        aria-label=\\"Close\\"
                    >
                        <span aria-hidden=\\"true\\">×</span>
                    </button>
                </div>
                <div class=\\"modal-body\\">
                    ...
                </div>
                <!-- <div class=\\"modal-footer\\"> -->
                <!--   <button type=\\"button\\" class=\\"btn btn-secondary\\" data-dismiss=\\"modal\\">Close</button> -->
                <!--   <button type=\\"button\\" class=\\"btn btn-primary\\">Save changes</button> -->
                <!-- </div> -->
            </div>
        </div>
    </div>

    <button
        type=\\"button\\"
        class=\\"btn btn-primary\\"
        data-toggle=\\"modal\\"
        data-target=\\"#exampleModal2\\"
    >
        Launch demo modal 2
    </button>
    <div
        class=\\"modal fade\\"
        id=\\"exampleModal2\\"
        tabindex=\\"-1\\"
        role=\\"dialog\\"
        aria-labelledby=\\"exampleModalLabel\\"
        aria-hidden=\\"true\\"
    >
        <div class=\\"modal-dialog\\" role=\\"document\\">
            <div class=\\"modal-content\\">
                <div class=\\"modal-header\\">
                    <h5 class=\\"modal-title\\" id=\\"exampleModalLabel\\">
                        Modal title 2
                    </h5>
                    <button
                        type=\\"button\\"
                        class=\\"close\\"
                        data-dismiss=\\"modal\\"
                        aria-label=\\"Close\\"
                    >
                        <span aria-hidden=\\"true\\">×</span>
                    </button>
                </div>
                <div class=\\"modal-body\\">
                    ...
                </div>
                <!-- <div class=\\"modal-footer\\"> -->
                <!--   <button type=\\"button\\" class=\\"btn btn-secondary\\" data-dismiss=\\"modal\\">Close</button> -->
                <!--   <button type=\\"button\\" class=\\"btn btn-primary\\">Save changes</button> -->
                <!-- </div> -->
            </div>
        </div>
    </div>
</div>
"
`;

exports[`application 2`] = `
"<div class=\\"container m-3\\">
    <button
        type=\\"button\\"
        class=\\"btn btn-primary\\"
        data-toggle=\\"modal\\"
        data-target=\\"#exampleModal\\"
    >
        Launch demo modal 1
    </button>
    <div
        class=\\"modal fade show\\"
        id=\\"exampleModal\\"
        tabindex=\\"-1\\"
        role=\\"dialog\\"
        aria-labelledby=\\"exampleModalLabel\\"
        aria-hidden=\\"true\\"
        style=\\"display: block;\\"
    >
        <div class=\\"modal-dialog\\" role=\\"document\\">
            <div class=\\"modal-content\\">
                <div class=\\"modal-header\\">
                    <h5 class=\\"modal-title\\" id=\\"exampleModalLabel\\">
                        Modal title 1
                    </h5>
                    <button
                        type=\\"button\\"
                        class=\\"close\\"
                        data-dismiss=\\"modal\\"
                        aria-label=\\"Close\\"
                    >
                        <span aria-hidden=\\"true\\">×</span>
                    </button>
                </div>
                <div class=\\"modal-body\\">
                    ...
                </div>
                <!-- <div class=\\"modal-footer\\"> -->
                <!--   <button type=\\"button\\" class=\\"btn btn-secondary\\" data-dismiss=\\"modal\\">Close</button> -->
                <!--   <button type=\\"button\\" class=\\"btn btn-primary\\">Save changes</button> -->
                <!-- </div> -->
            </div>
        </div>
    </div>

    <button
        type=\\"button\\"
        class=\\"btn btn-primary\\"
        data-toggle=\\"modal\\"
        data-target=\\"#exampleModal2\\"
    >
        Launch demo modal 2
    </button>
    <div
        class=\\"modal fade\\"
        id=\\"exampleModal2\\"
        tabindex=\\"-1\\"
        role=\\"dialog\\"
        aria-labelledby=\\"exampleModalLabel\\"
        aria-hidden=\\"true\\"
    >
        <div class=\\"modal-dialog\\" role=\\"document\\">
            <div class=\\"modal-content\\">
                <div class=\\"modal-header\\">
                    <h5 class=\\"modal-title\\" id=\\"exampleModalLabel\\">
                        Modal title 2
                    </h5>
                    <button
                        type=\\"button\\"
                        class=\\"close\\"
                        data-dismiss=\\"modal\\"
                        aria-label=\\"Close\\"
                    >
                        <span aria-hidden=\\"true\\">×</span>
                    </button>
                </div>
                <div class=\\"modal-body\\">
                    ...
                </div>
                <!-- <div class=\\"modal-footer\\"> -->
                <!--   <button type=\\"button\\" class=\\"btn btn-secondary\\" data-dismiss=\\"modal\\">Close</button> -->
                <!--   <button type=\\"button\\" class=\\"btn btn-primary\\">Save changes</button> -->
                <!-- </div> -->
            </div>
        </div>
    </div>
</div>
"
`;

exports[`application 3`] = `
"<div class=\\"container m-3\\">
    <button
        type=\\"button\\"
        class=\\"btn btn-primary\\"
        data-toggle=\\"modal\\"
        data-target=\\"#exampleModal\\"
    >
        Launch demo modal 1
    </button>
    <div
        class=\\"modal fade\\"
        id=\\"exampleModal\\"
        tabindex=\\"-1\\"
        role=\\"dialog\\"
        aria-labelledby=\\"exampleModalLabel\\"
        aria-hidden=\\"true\\"
        style=\\"display: none;\\"
    >
        <div class=\\"modal-dialog\\" role=\\"document\\">
            <div class=\\"modal-content\\">
                <div class=\\"modal-header\\">
                    <h5 class=\\"modal-title\\" id=\\"exampleModalLabel\\">
                        Modal title 1
                    </h5>
                    <button
                        type=\\"button\\"
                        class=\\"close\\"
                        data-dismiss=\\"modal\\"
                        aria-label=\\"Close\\"
                    >
                        <span aria-hidden=\\"true\\">×</span>
                    </button>
                </div>
                <div class=\\"modal-body\\">
                    ...
                </div>
                <!-- <div class=\\"modal-footer\\"> -->
                <!--   <button type=\\"button\\" class=\\"btn btn-secondary\\" data-dismiss=\\"modal\\">Close</button> -->
                <!--   <button type=\\"button\\" class=\\"btn btn-primary\\">Save changes</button> -->
                <!-- </div> -->
            </div>
        </div>
    </div>

    <button
        type=\\"button\\"
        class=\\"btn btn-primary\\"
        data-toggle=\\"modal\\"
        data-target=\\"#exampleModal2\\"
    >
        Launch demo modal 2
    </button>
    <div
        class=\\"modal fade\\"
        id=\\"exampleModal2\\"
        tabindex=\\"-1\\"
        role=\\"dialog\\"
        aria-labelledby=\\"exampleModalLabel\\"
        aria-hidden=\\"true\\"
    >
        <div class=\\"modal-dialog\\" role=\\"document\\">
            <div class=\\"modal-content\\">
                <div class=\\"modal-header\\">
                    <h5 class=\\"modal-title\\" id=\\"exampleModalLabel\\">
                        Modal title 2
                    </h5>
                    <button
                        type=\\"button\\"
                        class=\\"close\\"
                        data-dismiss=\\"modal\\"
                        aria-label=\\"Close\\"
                    >
                        <span aria-hidden=\\"true\\">×</span>
                    </button>
                </div>
                <div class=\\"modal-body\\">
                    ...
                </div>
                <!-- <div class=\\"modal-footer\\"> -->
                <!--   <button type=\\"button\\" class=\\"btn btn-secondary\\" data-dismiss=\\"modal\\">Close</button> -->
                <!--   <button type=\\"button\\" class=\\"btn btn-primary\\">Save changes</button> -->
                <!-- </div> -->
            </div>
        </div>
    </div>
</div>
"
`;

exports[`application 4`] = `
"<div class=\\"container m-3\\">
    <button
        type=\\"button\\"
        class=\\"btn btn-primary\\"
        data-toggle=\\"modal\\"
        data-target=\\"#exampleModal\\"
    >
        Launch demo modal 1
    </button>
    <div
        class=\\"modal fade\\"
        id=\\"exampleModal\\"
        tabindex=\\"-1\\"
        role=\\"dialog\\"
        aria-labelledby=\\"exampleModalLabel\\"
        aria-hidden=\\"true\\"
        style=\\"display: none;\\"
    >
        <div class=\\"modal-dialog\\" role=\\"document\\">
            <div class=\\"modal-content\\">
                <div class=\\"modal-header\\">
                    <h5 class=\\"modal-title\\" id=\\"exampleModalLabel\\">
                        Modal title 1
                    </h5>
                    <button
                        type=\\"button\\"
                        class=\\"close\\"
                        data-dismiss=\\"modal\\"
                        aria-label=\\"Close\\"
                    >
                        <span aria-hidden=\\"true\\">×</span>
                    </button>
                </div>
                <div class=\\"modal-body\\">
                    ...
                </div>
                <!-- <div class=\\"modal-footer\\"> -->
                <!--   <button type=\\"button\\" class=\\"btn btn-secondary\\" data-dismiss=\\"modal\\">Close</button> -->
                <!--   <button type=\\"button\\" class=\\"btn btn-primary\\">Save changes</button> -->
                <!-- </div> -->
            </div>
        </div>
    </div>

    <button
        type=\\"button\\"
        class=\\"btn btn-primary\\"
        data-toggle=\\"modal\\"
        data-target=\\"#exampleModal2\\"
    >
        Launch demo modal 2
    </button>
    <div
        class=\\"modal fade show\\"
        id=\\"exampleModal2\\"
        tabindex=\\"-1\\"
        role=\\"dialog\\"
        aria-labelledby=\\"exampleModalLabel\\"
        aria-hidden=\\"true\\"
        style=\\"display: block;\\"
    >
        <div class=\\"modal-dialog\\" role=\\"document\\">
            <div class=\\"modal-content\\">
                <div class=\\"modal-header\\">
                    <h5 class=\\"modal-title\\" id=\\"exampleModalLabel\\">
                        Modal title 2
                    </h5>
                    <button
                        type=\\"button\\"
                        class=\\"close\\"
                        data-dismiss=\\"modal\\"
                        aria-label=\\"Close\\"
                    >
                        <span aria-hidden=\\"true\\">×</span>
                    </button>
                </div>
                <div class=\\"modal-body\\">
                    ...
                </div>
                <!-- <div class=\\"modal-footer\\"> -->
                <!--   <button type=\\"button\\" class=\\"btn btn-secondary\\" data-dismiss=\\"modal\\">Close</button> -->
                <!--   <button type=\\"button\\" class=\\"btn btn-primary\\">Save changes</button> -->
                <!-- </div> -->
            </div>
        </div>
    </div>
</div>
"
`;

exports[`application 5`] = `
"<div class=\\"container m-3\\">
    <button
        type=\\"button\\"
        class=\\"btn btn-primary\\"
        data-toggle=\\"modal\\"
        data-target=\\"#exampleModal\\"
    >
        Launch demo modal 1
    </button>
    <div
        class=\\"modal fade\\"
        id=\\"exampleModal\\"
        tabindex=\\"-1\\"
        role=\\"dialog\\"
        aria-labelledby=\\"exampleModalLabel\\"
        aria-hidden=\\"true\\"
        style=\\"display: none;\\"
    >
        <div class=\\"modal-dialog\\" role=\\"document\\">
            <div class=\\"modal-content\\">
                <div class=\\"modal-header\\">
                    <h5 class=\\"modal-title\\" id=\\"exampleModalLabel\\">
                        Modal title 1
                    </h5>
                    <button
                        type=\\"button\\"
                        class=\\"close\\"
                        data-dismiss=\\"modal\\"
                        aria-label=\\"Close\\"
                    >
                        <span aria-hidden=\\"true\\">×</span>
                    </button>
                </div>
                <div class=\\"modal-body\\">
                    ...
                </div>
                <!-- <div class=\\"modal-footer\\"> -->
                <!--   <button type=\\"button\\" class=\\"btn btn-secondary\\" data-dismiss=\\"modal\\">Close</button> -->
                <!--   <button type=\\"button\\" class=\\"btn btn-primary\\">Save changes</button> -->
                <!-- </div> -->
            </div>
        </div>
    </div>

    <button
        type=\\"button\\"
        class=\\"btn btn-primary\\"
        data-toggle=\\"modal\\"
        data-target=\\"#exampleModal2\\"
    >
        Launch demo modal 2
    </button>
    <div
        class=\\"modal fade\\"
        id=\\"exampleModal2\\"
        tabindex=\\"-1\\"
        role=\\"dialog\\"
        aria-labelledby=\\"exampleModalLabel\\"
        aria-hidden=\\"true\\"
        style=\\"display: none;\\"
    >
        <div class=\\"modal-dialog\\" role=\\"document\\">
            <div class=\\"modal-content\\">
                <div class=\\"modal-header\\">
                    <h5 class=\\"modal-title\\" id=\\"exampleModalLabel\\">
                        Modal title 2
                    </h5>
                    <button
                        type=\\"button\\"
                        class=\\"close\\"
                        data-dismiss=\\"modal\\"
                        aria-label=\\"Close\\"
                    >
                        <span aria-hidden=\\"true\\">×</span>
                    </button>
                </div>
                <div class=\\"modal-body\\">
                    ...
                </div>
                <!-- <div class=\\"modal-footer\\"> -->
                <!--   <button type=\\"button\\" class=\\"btn btn-secondary\\" data-dismiss=\\"modal\\">Close</button> -->
                <!--   <button type=\\"button\\" class=\\"btn btn-primary\\">Save changes</button> -->
                <!-- </div> -->
            </div>
        </div>
    </div>
</div>
"
`;
